hw03 finished saving for version history

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 /.DS_Store
 /.vscode
+hw/hw03/myRabbitRun0.out
+hw/hw03/myStarsSlashes5.out
+hw/hw03/myTuftsJumbo4.out
+hw/hw03/RabbitRun0.in
+hw/hw03/RabbitRun0.out
+hw/hw03/StarsSlashes5.in
+hw/hw03/StarsSlashes5.out
+hw/hw03/TuftsJumbo4.in
+hw/hw03/TuftsJumbo4.out
+hw/hw03/myTuftsJumbo4.out
