--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@ hw/hw03/StarsSlashes5.out
 hw/hw03/TuftsJumbo4.in
 hw/hw03/TuftsJumbo4.out
 hw/hw03/myTuftsJumbo4.out
+labs/lab04/1000.bd
+labs/lab04/printlist_starter.cpp
+labs/lab04/set1.bd
+labs/lab04/set2.bd
+labs/lab04/set3.bd
+labs/lab04/set4.bd
+labs/lab04/set5.bd
+labs/lab04/set6.bd
+labs/lab04/set7.bd
