finished students need comments

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ labs/lab04/set4.bd
 labs/lab04/set5.bd
 labs/lab04/set6.bd
 labs/lab04/set7.bd
+hw/hw05/most_common_int
+hw/hw05/int_to_string
+hw/hw05/my_student_test.out
+hw/hw05/string_to_int
+hw/hw05/students
