proj1wk1 finished; no bugs

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,9 @@
 /.DS_Store
 /.vscode
-hw/hw03/myRabbitRun0.out
-hw/hw03/myStarsSlashes5.out
-hw/hw03/myTuftsJumbo4.out
-hw/hw03/RabbitRun0.in
-hw/hw03/RabbitRun0.out
-hw/hw03/StarsSlashes5.in
-hw/hw03/StarsSlashes5.out
-hw/hw03/TuftsJumbo4.in
-hw/hw03/TuftsJumbo4.out
-hw/hw03/myTuftsJumbo4.out
-labs/lab04/1000.bd
+*.in
+*.out
+*.bd
 labs/lab04/printlist_starter.cpp
-labs/lab04/set1.bd
-labs/lab04/set2.bd
-labs/lab04/set3.bd
-labs/lab04/set4.bd
-labs/lab04/set5.bd
-labs/lab04/set6.bd
-labs/lab04/set7.bd
 hw/hw05/most_common_int
 hw/hw05/int_to_string
 hw/hw05/my_student_test.out
